examples/valid/program80.c
int add_four(int a, int b, int c, int d) {
    return a + b + c + d;
}

int main(void) {
    return add_four(1, 2, 3, 4);
}

