examples/invalid/program44.c
int f(int a, int b, int c) {
    return a + b + c;
}

int main(void) {
    int x;
    x = f(1, 2);
    return x;
}

